--- a/Resources/Views/about.html
+++ b/Resources/Views/about.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>关于再书</title>
+    <link rel="stylesheet" type="text/css" href="./css/app.css">
 </head>
 <body>
-    <h1>关于再书</h1>
+    <h1 class="app-h1">关于再书</h1>
 </body>
 </html>
