--- a/Resources/Views/index.html
+++ b/Resources/Views/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>index</title>
+    <link rel="stylesheet" type="text/css" href="./css/app.css">
 </head>
 <body>
-    <h1 style="font-size: 36px; text-align: center;">Welcome TwiceBook</h1>
+    <h1 class="app-h1">Welcome TwiceBook</h1>
 </body>
 </html>
