--- a/Resources/Views/protocol.html
+++ b/Resources/Views/protocol.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>再书用户协议</title>
+    <link rel="stylesheet" type="text/css" href="./css/app.css">
 </head>
 <body>
-    <h1>再书用户协议</h1>
+    <h1 class="app-h1">再书用户协议</h1>
 </body>
 </html>
