--- a/Resources/Views/index.html
+++ b/Resources/Views/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>index</title>
-    <link rel="stylesheet" type="text/css" href="./css/app.css">
+    <link rel="stylesheet" type="text/css" href="./styles/app.css">
 </head>
 <body>
     <h1 class="app-h1">Welcome TwiceBook</h1>
