--- a/Resources/Views/protocol.html
+++ b/Resources/Views/protocol.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" type="text/css" href="./styles/app.css">
 </head>
 <body>
-    <h1 class="app-h1">再书用户协议</h1>
+    <h1 class="app-h1">《再书用户协议》</h1>
 </body>
 </html>
