--- a/Resources/Views/index.html
+++ b/Resources/Views/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h1 class="app-h1">Welcome TwiceBook</h1>
+
+    <div class="app-index-div"><a href="./about">关于</a>  <a href="./protocol">再书用户协议</a></div>
 </body>
 </html>
