--- a/Resources/Views/about.html
+++ b/Resources/Views/about.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport"
+          content="width=device-width,
+            initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,
+            user-scalable=no">
     <title>关于再书</title>
+
     <link rel="stylesheet" type="text/css" href="./styles/app.css">
 </head>
 <body>
     <h1 class="app-h1">关于再书</h1>
+
+    <div class="about-content">
+        <ul>
+            <li> 更好发布你的闲置书籍 </li>
+            <li> 更快的搜索你想要的书籍 </li>
+            <li> 只做二手书籍，让你我沉浸书的海洋 </li>
+        </ul>
+
+    </div>
+
+
+
+
 </body>
 </html>
