--- a/Resources/Views/index.html
+++ b/Resources/Views/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport"
+          content="width=device-width,
+            initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,
+            user-scalable=no">
     <title>index</title>
+
     <link rel="stylesheet" type="text/css" href="./styles/app.css">
 </head>
 <body>
     <h1 class="app-h1">Welcome TwiceBook</h1>
-
     <div class="app-index-div"><a href="./about">关于</a>  <a href="./protocol">再书用户协议</a></div>
 </body>
 </html>
