--- a/Resources/Views/protocol.html
+++ b/Resources/Views/protocol.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport"
+          content="width=device-width,
+            initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,
+            user-scalable=no">
     <title>再书用户协议</title>
     <link rel="stylesheet" type="text/css" href="./styles/app.css">
 </head>
