--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -17,7 +17,9 @@
 }
 
 .about-content {
-    text-align: center;
+    padding: 50px;
+    margin-top: 50px;
+    text-align: left;
     font-size: 14px;
     line-height: 30px;
 }
