--- a/Resources/Views/about.html
+++ b/Resources/Views/about.html
@@ -10,19 +10,17 @@
     <link rel="stylesheet" type="text/css" href="./styles/app.css">
 </head>
 <body>
-    <h1 class="app-h1">关于再书</h1>
-
     <div class="about-content">
-        <ul>
-            <li> 更好发布你的闲置书籍 </li>
-            <li> 更快的搜索你想要的书籍 </li>
-            <li> 只做二手书籍，让你我沉浸书的海洋 </li>
-        </ul>
+
+        <p>
+            <h3>再书为您提供：</h3>
+            <ul>
+                <li> * 更好的发布你的闲置书籍 </li>
+                <li> * 更快的搜索你想要的书籍 </li>
+                <li> * 只做书籍，让你我沉浸书的海洋 </li>
+            </ul>
+        </p>
 
     </div>
-
-
-
-
 </body>
 </html>
