feat: 添加隐私协议

--- a/Resources/Views/protocol.html
+++ b/Resources/Views/protocol.html
@@ -10,25 +10,72 @@
 </head>
 
 <body>
-    <h1 class="app-h1">《再书用户协议》</h1>
-    <div class="protocol-content">
-    <p>欢迎使用Twicebook!</p>
-    <p>您的访问和使用Twicebook手机应用和网站（下称为“Twicebook”）会受到本隐私政策约束。 请确保阅读和理解细节。如果你不接受条款和条件，您可关闭及放弃使用Twicebook。 若用户要继续使用Twicebook，所有用户必须遵守以下条款，同意及接受所有有关条款的约束。</p>
-    <p>私隐政策如下:</p>
-    <ol>
-        <li> 我们会收集可用于识别特定用户的个人信息。当用户订阅Twicebook的服务，如创建一个新帐户，填写了调查，并发送反馈，要求我们的服务信息，我们可能会要求用户以应付相关个人信息，例如，姓和名，电子邮件地址，邮寄地址。</li>
-        <li> 我们使用收集的个人信息向我们的用户提供服务，并作分析，以提高我们的运营绩效。</li>
-        <li> 当受到法院或法庭命令，或由政府执法机关或行政机关的要求下，或在其他有需要及必要情况下， 我们有权披露阁下在Twicebook内留下的任何资料去保障其他人的权利及财产。 这亦适用于当我们有理由相信阁下有有意或无意间干预或侵犯了Twicebook或其他相关人士的权利及财产低下，我们有权披露阁下个人资料给相关机关并作出起诉。</li>
-        <li>你能够访问和编辑您向我们提供您的个人信息。您可以通过访问您的用户帐户和编辑个人资料来更改您的任何个人信息。</li>
-        <li>Twicebook的用户，我们会发送你关于管理和促销的电子邮件，并会向您发送有关您的帐户活动和宣传材料的信息。</li>
-        <li>如果您不希望收到我们的邮件，请发送电子邮件至oheroj@gmail.com退订或联繫您相关的客户服务。我们会从我们的邮件列表中删除您的电子邮件地址。
-        </li>
-        <li>如果您链接到任何此类网站，我们建议您查看Twicebook </li>的隐私政策。本隐私政策仅适用于通过本网站收集的信息。我们是不负责的政策或第三方网站或机构的做法。
-        <li>Twicebook将尽其合理努力，以确保其董事、僱员及承包商谨慎地处理及使用用户提交的个人数据， 以及由该人的个人资料的获取和处理是一个“需方知和“需要使用”的基础。Twicebook将尽其合理努力以保护个人数据不受个人数据的任何未经授权或意外，处理或删除。</li>
-        <li>Twicebook以内的材料，包括不限于任何想法，建议，意见，信息或其他通信用户发送或张贴到本网站出于任何目的。我们不会承担责任或赔偿任何个人或实体。</li>
-        <li>我们可以随时更改本隐私政策，修订后的版本发布后，立即生效。Twicebook每个用户有责任定期审查隐私政策，以了解任何修订。如有任何疑问，请联络我们。</li>
-    </ol>
-
+    <div>
+        <h1 class="app-h1">《隐私政策》</h1>
+        <div class="protocol-content">
+            <p>欢迎使用Twicebook!</p>
+            <p>您的访问和使用Twicebook手机应用和网站（下称为“Twicebook”）会受到本隐私政策约束。 请确保阅读和理解细节。如果你不接受条款和条件，您可关闭及放弃使用Twicebook。 若用户要继续使用Twicebook，所有用户必须遵守以下条款，同意及接受所有有关条款的约束。</p>
+            <p>私隐政策如下:</p>
+            <ol>
+                <li> 我们会收集可用于识别特定用户的个人信息。当用户订阅Twicebook的服务，如创建一个新帐户，填写了调查，并发送反馈，要求我们的服务信息，我们可能会要求用户以应付相关个人信息，例如，姓和名，电子邮件地址，邮寄地址。</li>
+                <li> 我们使用收集的个人信息向我们的用户提供服务，并作分析，以提高我们的运营绩效。</li>
+                <li> 当受到法院或法庭命令，或由政府执法机关或行政机关的要求下，或在其他有需要及必要情况下， 我们有权披露阁下在Twicebook内留下的任何资料去保障其他人的权利及财产。 这亦适用于当我们有理由相信阁下有有意或无意间干预或侵犯了Twicebook或其他相关人士的权利及财产低下，我们有权披露阁下个人资料给相关机关并作出起诉。</li>
+                <li>你能够访问和编辑您向我们提供您的个人信息。您可以通过访问您的用户帐户和编辑个人资料来更改您的任何个人信息。</li>
+                <li>Twicebook的用户，我们会发送你关于管理和促销的电子邮件，并会向您发送有关您的帐户活动和宣传材料的信息。</li>
+                <li>如果您不希望收到我们的邮件，请发送电子邮件至oheroj@gmail.com退订或联繫您相关的客户服务。我们会从我们的邮件列表中删除您的电子邮件地址。
+                </li>
+                <li>如果您链接到任何此类网站，我们建议您查看Twicebook </li>的隐私政策。本隐私政策仅适用于通过本网站收集的信息。我们是不负责的政策或第三方网站或机构的做法。
+                <li>Twicebook将尽其合理努力，以确保其董事、僱员及承包商谨慎地处理及使用用户提交的个人数据， 以及由该人的个人资料的获取和处理是一个“需方知和“需要使用”的基础。Twicebook将尽其合理努力以保护个人数据不受个人数据的任何未经授权或意外，处理或删除。</li>
+                <li>Twicebook以内的材料，包括不限于任何想法，建议，意见，信息或其他通信用户发送或张贴到本网站出于任何目的。我们不会承担责任或赔偿任何个人或实体。</li>
+                <li>我们可以随时更改本隐私政策，修订后的版本发布后，立即生效。Twicebook每个用户有责任定期审查隐私政策，以了解任何修订。如有任何疑问，请联络我们。</li>
+            </ol>
+        </div>
+    </div>
+    <div>
+        <h1 class="app-h1">《服务条款》</h1>
+        <div class="protocol-content">
+            <p>欢迎使用Twicebook!</p>
+            <p>您的访问和使用Twicebook手机应用和网站或其下产品及服务（下称为“ Twicebook ”）会受到本服务条款约束。若阁下要继续使用Twicebook，所有用户必须遵守以下条款，同意及接受所有有关条款的约束。以及我们可以随时更改本隐私政策，修订后的版本发布后，立即生效。Twicebook每个用户有责任定期审查服务条款，以了解任何修订。</p>
+            <p>服务条款细则如下:</p>
+            <ol>
+                <li> 在没有任何Twicebook官方授权底下擅自入侵，访问，使用或者企图侵入，闯入，进入或使用Twicebook的伺服器，或任何阁下没有授权的数据区。</li>
+                <li> 发布或传播任何非法，欺诈，中伤，诽谤，淫秽，色情，亵渎任何一种，包括辱骂，有害，攻击性或其他不良或不合理的信息，包括构成或鼓励可能会构成刑事罪行，引起民事责任或违反任何地方，州，国家或外国法律。
+                </li>
+                <li>在没有任何Twicebook官方授权底下，发布，传播，複製，分发或以任何方式利用从本网站获取的任何信息作任何的商业用途。
+                </li>
+                <li>在没有任何版权或所有权拥有者授权底下，上传，张贴，发布，传输，複製，或以任何方式分发通过本网站获得受版权及所有权保护的信息， 或在没有的事先书面许可下，就创作任何会侵犯著作权人，版权或所有权拥有者的任何专利，商标，商业秘密或其他知识产权或其他第三方权利的衍生作品。
+                </li>
+                <li>以任何方式骚扰或侵犯他人的合法权益。除由法律或本条款和条件允许下。您没有权利以任何方式或为任何目的使用本网站提供的信息。
+                </li>
+                <li>当我们认为您已违反任何条款和条件或这项禁令或需要或必要在我们的判断是用户是否合适。 Twicebook 保留权利在任何时候都禁止， 拒绝或者立即暂停用户使用权并恕不另行通知。
+                </li>
+                <li>我们不是你和任何第三方之间的任何交易的当事人，我们不认可或担保任何来自连结网站等的信息，材料，产品或服务。
+                </li>
+                <li>网站内的任何，知识产权，文字，图像，佈局，数据库，图形，图片，声音或音频格式，软件，品牌和 Twicebook上的所有其它材料均是由版权和商标法律的保护，不得在没有Twicebook明确书面许可下下载或複製。再利用任何前述的被严格禁止。
+                </li>
+                <li>Twicebook用户应承认并同意，我们可自由複製，披露，分发或以其他方式使用任何在Twicebook 以内的材料，包括不限于任何想法，建议，意见，信息或其他通信用户发送或张贴到本网站出于任何目的。我们不会承担责任或赔偿任何个人或实体。
+                </li>
+                <li>在此服务条款的约束下Twicebook有权使用在Twicebook内的任何内容，包括更改任何发送到 Twicebook的照片大小及数量。Twicebook亦保留权利以任何理由去修改或删除发布在Twicebook 任何内容或材料，而无须给予任何预先通知或理由给用户。 用户应承认Twicebook将不负责任何一方对服务的修改，暂停或终止。
+                </li>
+                <li>若查阅私隐条款，请参考我们的隐私政策。
+                </li>
+                <li>Twicebook的内容只作一般参考用途，并不构成任何建议。Twicebook试图提供内容的真实，准确书写的日期；但是我们给不保证或担保给予内容的准确性，及时性，或任何内容适用性。
+                </li>
+                <li>Twicebook不会对本网站上的信息内容承担任何责任。Twicebook不承担及承认任何关于商家和 Twicebook 的用户之间进行商业交易的责任。 在任何情况下 Twicebook不会承担及承认任何直接或间接的损失或损害，包括数据或利润损失任何引起的任何损失或损害。
+                </li>
+                <li>Twicebook不会接受任何关于浏览本网站的责任，包括使用信息或从中下载任何资料，针对错误，不准确，遗漏或误导性或诽谤性言论。 在这个网站上的信息可能包括意见或观点当中，除非另有说明， Twicebook或关联公司或任何人就将不会承担任何责任。 在本网站下载或以其他方式获得本网站的任何信息前，用户自己需要判断和承担风险，而该用户将承担计算机系统，或从下载任何此类信息的造成数据丢失的任何损害的责任。
+                </li>
+                <li>在Twicebook的所有内容和信息可能会被更改或更新而不另行通知。Twicebook也可能随时改变或改进，恕不另行通知。
+                </li>
+                <li>Twicebook特此排除任何有关的任何信息，内容，或在我们网站上列出的服务的索赔，损失，要求或任何损失的责任，包括但不限于直接，间接，附带或间接的损失或损害赔偿，赔偿损失，利润损失，或数据，或以其他方式的损失。
+                </li>
+                <li>Twicebook会尽一切努力，以保持服务质素及稳定性。然而， 对于我们无法控制的技术问题，Twicebook暂时不会承担任何责任。
+                </li>
+                <li>在任何情况下，Twicebook，其管理人员，董事，僱员或代理人不得在任何用户遭受的任何损失，索赔或损害上承担任何法律责任，或他/她的使用而造成的或从他/产生的任何事件承担责任她使用不适当使用的网站及其内容，包括疏忽和任何一方之间的纠纷。
+                </li>
+                <li>我们可以随时更改本隐私政策，修订后的版本发布后，立即生效。Twicebook每个用户有责任定期审查服务条款，以了解任何修订。</li>
+            </ol>
+        </div>
     </div>
 </body>
 
