--- a/Resources/Views/index.html
+++ b/Resources/Views/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="./styles/app.css">
 </head>
 <body>
-    <h1 class="app-h1">Welcome TwiceBook</h1>
+    <h1 class="app-index-h1">Welcome TwiceBook</h1>
     <div class="app-index-div"><a href="./about">关于</a>  <a href="./protocol">再书用户协议</a></div>
 </body>
 </html>
