--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -3,6 +3,11 @@
     text-align: center;
 }
 
+.app-index-h1 {
+    font-size: 64px;
+    text-align: center;
+}
+
 .app-index-div {
     text-align: center;
     font-size: 18px;
